feta: 配置接口补充和自动落盘
